# domain_flow_mlir

./: .gitignore  CMakeLists.txt  CMakePresets.json
.github/workflows/: cmake-multi-platform.yml
include/: dfa_mlir.hpp
include/dfa/: affine_map.hpp  arithmetic_complexity.hpp  compute_event.hpp  dependency_graph.hpp  dfa.hpp  dfg.hpp  domain_flow_edge.hpp  domain_flow_graph.hpp  domain_flow_node.hpp  domain_flow_operator.hpp  hyperplane.hpp  index_point.hpp  index_space.hpp  matrix.hpp  parallel_computation_scene_graph.hpp  recurrence_var.hpp  schedule.hpp  tensor_spec_parser.hpp  vector.hpp
include/dfa/mlir/: processModule.hpp
include/dfa/mlir/dialect/: tosa.hpp
include/graph/: graph.hpp
include/graph/algorithm/shortest_path/: common.hpp  dijkstra.hpp
include/graph/base/: graph.hpp
include/util/: data_file.hpp
tools/: CMakeLists.txt
tools/mlir/: CMakeLists.txt  CMakeLists.txt.bak  README.md  builtin.mlir  mlir_bc_converter.cpp  mlir_bc_parser.cpp  mlir_importer.cpp  mlir_serialization.cpp  notes.txt
tools/opt/: CMakeLists.txt  dfa-opt-help.txt  dfa_opt.cpp
tools/tosa/: CMakeLists.txt  analyzer.cpp  dfa_import.cpp  mlir_walk_results.cpp  tosa_executor.cpp  tosa_parser.cpp
